--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # LangGraph 및 핵심 의존성
-langgraph>=0.0.50
-langchain>=0.1.0
-langchain-core>=0.1.0
+langchain==0.2.14
+langchain-core==0.2.39
+langchain-openai==0.1.23
+langgraph==0.2.40
 
 # 상태 타입 정의를 위한 스키마 라이브러리
 pydantic>=2.0.0
@@ -20,9 +21,8 @@ typing-extensions>=4.5.0
 orjson>=3.9.0
 
 # LLM 통합 (선택사항 - 필요시 사용)
-langchain-openai>=0.1.0
-langchain-community>=0.1.0
-openai>=1.0.0
+langchain-community>=0.0.0
+openai>=1.3.0
 # anthropic>=0.7.0
 
 # 데이터 처리
@@ -32,6 +32,7 @@ pandas>=2.0.0
 # 시각화 및 디버깅
 networkx>=3.1  # 그래프 시각화
 matplotlib>=3.7.0  # 그래프 그리기
+seaborn==0.13.2  # 데이터 시각화
 grandalf>=0.6  # ASCII 그래프 드로잉
 
 # CrewAI
